--- a/config.ini
+++ b/config.ini
@@ -10,7 +10,7 @@ min_learning_rate=1e-8
 
 ; batch size and epoch number of Deep Neural Network
 batch_size=32
-epochs=2
+epochs=20
 
 ; controls the amount of logging done during training and testing: 
 ; 0 - none , 
@@ -23,25 +23,25 @@ verbose = 1
 img_process_function = "equalize_adapthist"
 
 ; use this setting if you use kaggle SIIM notebook
-isKaggleData=true
+isKaggleData=false
 
 ; classification_type :  multi or binary
 ; classifier : ann or svm
 classification_type=binary
-classifier=ann
+classifier=svm
 
 ; feature extraction parameters
 ; train_num and val_num means generators generate images the count of batch_size * train_num
 ; feature_number is the length of feature vector after passing through transfer network
-train_num=20
-val_num=6
+train_num=100
+val_num=70
 feature_number=128
 
 ; an svm configuration using for plotting cross-validation splits and their values on lineplot
-show_cv_split_values=true
+show_cv_scores=true
 
 ; if true, transfer model's weights are trainable
 use_fine_tuning=true
 
 ; if true, loads pretrained chexnet model's weights (ResNet121)
-use_chex_weights=true
+use_chex_weights=false
