--- a/config.ini
+++ b/config.ini
@@ -20,7 +20,7 @@ verbose = 1
 
 ; preprocess function for images before forward pass
 ; defined functions for now: equalize_adapthist, equalize_hist, rescale_intensity
-img_process_function = "equalize_adapthist"
+img_process_function=equalize_adapthist
 
 ; use this setting if you use kaggle SIIM notebook
 isKaggleData=false
@@ -45,3 +45,7 @@ use_fine_tuning=true
 
 ; if true, loads pretrained chexnet model's weights (ResNet121)
 use_chex_weights=false
+
+; libraries used in covid xray transfer learning
+libraries=pandas,numpy,sklearn,tensorflow,keras,skimage,matplotlib,seaborn
+show_versions=True
