last_updates_with_bayesian_opt_and_some_cleaned_data

--- a/config.ini
+++ b/config.ini
@@ -10,7 +10,7 @@ min_learning_rate=1e-8
 
 ; batch size and epoch number of Deep Neural Network
 batch_size=32
-epochs=20
+epochs=1
 
 ; controls the amount of logging done during training and testing: 
 ; 0 - none , 
@@ -33,8 +33,8 @@ classifier=svm
 ; feature extraction parameters
 ; train_num and val_num means generators generate images the count of batch_size * train_num
 ; feature_number is the length of feature vector after passing through transfer network
-train_num=100
-val_num=70
+train_num=120
+val_num=35
 feature_number=128
 
 ; an svm configuration using for plotting cross-validation splits and their values on lineplot
@@ -49,3 +49,7 @@ use_chex_weights=false
 ; libraries used in covid xray transfer learning
 libraries=pandas,numpy,sklearn,tensorflow,keras,skimage,matplotlib,seaborn
 show_versions=True
+
+; SVM hyperparameter search
+; defined search functions: grid, bayes
+svm_hyp_search=bayes
