--- a/config.ini
+++ b/config.ini
@@ -34,8 +34,8 @@ classifier=svm
 ; train_num and val_num means generators generate images the count of batch_size * train_num
 ; feature_number is the length of feature vector after passing through transfer network
 ; max train_num = 200, max val_num = 
-train_num=200
-val_num=10
+train_num=1000
+val_num=325
 feature_number=128
 
 ; an svm configuration using for plotting cross-validation splits and their values on lineplot
@@ -53,7 +53,7 @@ show_versions=True
 
 ; SVM hyperparameter search
 ; defined search functions: grid, bayes
-svm_hyp_search=grid
+svm_hyp_search=bayes
 
 ; Change it true if you want to save model's weights
 save_weights=false
